<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_offer"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/navigation_offer" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/navigation_search" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/sym_action_chat"
        android:title="@string/navigation_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/btn_star"
        android:title="@string/navigation_profile" />



</menu>
